fixed promo alignment

--- a/styles/ctaFull.module.scss
+++ b/styles/ctaFull.module.scss
@@ -9,11 +9,14 @@
 }
 
 .ctaWrapper {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   padding: 0 20vw;
+  height: 485px;
+
   @include phone {
     padding: 0 10vw;
   }
@@ -37,7 +40,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.2);
+    background: rgba(0, 0, 0, 0.5);
     z-index: 2;
   }
 
