--- a/styles/promo.module.scss
+++ b/styles/promo.module.scss
@@ -241,3 +241,10 @@
     margin: 6rem 1rem 0 1rem;
   }
 }
+
+.promoCenter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 6rem 1rem;
+}
